[package]
name = "rocksdb-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.24.0"     # Terminal UI framework
crossterm = "0.27.0"   # Terminal manipulation and input handling
rocksdb = "0.21"       # Database access
serde_json = "1.0"     # JSON parsing
anyhow = "1.0"         # Error handling
clap = { version = "4.0", features = ["derive"] } # Command line parsing
